exports[`test Child nodes 1`] = `
<div
  className="pe-list pe-list--borders      ">
  <ListTile
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Dark tone class + light theme class 1`] = `
<div
  className="pe-list pe-list--borders  pe-list--header    pe-light-tone"
  style={
    Object {
      "background": "#fff",
    }
  }>
  <ListTile
    className="pe-list__header "
    title="Friends" />
  <ListTile
    hoverable={true}
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    hoverable={true}
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    hoverable={true}
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Dark tone class + light tone 1`] = `
<div
  className="pe-list pe-list--borders  pe-list--header   pe-light-tone "
  style={
    Object {
      "background": "#fff",
    }
  }>
  <ListTile
    className="pe-list__header "
    title="Friends" />
  <ListTile
    hoverable={true}
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    hoverable={true}
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    hoverable={true}
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test No options 1`] = `
<div
  className="pe-list       " />
`;

exports[`test Option: class -- dark theme class 1`] = `
<div
  className="pe-list pe-list--borders  pe-list--header    ">
  <ListTile
    className="pe-list__header "
    title="Friends" />
  <ListTile
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Option: class 1`] = `
<div
  className="pe-list       class-x" />
`;

exports[`test Option: className 1`] = `
<div
  className="pe-list       className-x" />
`;

exports[`test Option: compact 1`] = `
<div
  className="pe-list pe-list--borders  pe-list--header pe-list--compact   ">
  <ListTile
    className="pe-list__header "
    title="Friends" />
  <ListTile
    front={
      <Icon
        avatar={true}
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png"
        type="large" />
    }
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    front={
      <Icon
        avatar={true}
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png"
        type="large" />
    }
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    front={
      <Icon
        avatar={true}
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png"
        type="large" />
    }
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Option: element 1`] = `
<a
  className="pe-list       " />
`;

exports[`test Option: id 1`] = `
<div
  className="pe-list       "
  id="id-x" />
`;

exports[`test Option: style (colors) 1`] = `
<div
  className="pe-list   pe-list--header    "
  style={
    Object {
      "backgroundColor": "#EF6C00",
      "color": "#fff",
    }
  }>
  <ListTile
    className="pe-list__header "
    style={
      Object {
        "color": "rgba(255,255,255,.8)",
      }
    }
    title="Friends" />
  <ListTile
    style={
      Object {
        "color": "#fff",
      }
    }
    title="One" />
  <ListTile
    style={
      Object {
        "color": "#fff",
      }
    }
    title="Two" />
  <ListTile
    style={
      Object {
        "color": "#fff",
      }
    }
    title="Three" />
</div>
`;

exports[`test Option: tiles 1`] = `
<div
  className="pe-list pe-list--borders      ">
  <ListTile
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Options: header, tiles with urls 1`] = `
<div>
  <List
    borders={true}
    header={
      Object {
        "title": "Friends",
      }
    }
    tiles={
      Array [
        <withRouter() />,
        <withRouter() />,
        <withRouter() />,
      ]
    } />
  <List
    borders={true}
    header={
      Object {
        "title": "Friends",
      }
    }
    tiles={
      Array [
        <withRouter() />,
        <withRouter() />,
        <withRouter() />,
      ]
    } />
</div>
`;

exports[`test Options: header, tiles, indent, indentedBorders (JSX) 1`] = `
<List
  header={
    Object {
      "indent": true,
      "title": "Friends",
    }
  }
  indentedBorders={true}>
  <ListTile
    front={
      <Icon
        avatar={true}
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png"
        type="large" />
    }
    indent={true}
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    front={
      <Icon
        avatar={true}
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png"
        type="large" />
    }
    indent={true}
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    front={
      <Icon
        avatar={true}
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png"
        type="large" />
    }
    indent={true}
    subtitle="Binge watching..."
    title="Grace VanDam" />
</List>
`;

exports[`test Options: header, tiles, indent, indentedBorders 1`] = `
<div
  className="pe-list  pe-list--indented-borders pe-list--header    ">
  <ListTile
    className="pe-list__header "
    indent={true}
    title="Friends" />
  <ListTile
    indent={true}
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    indent={true}
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    indent={true}
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Themed list (colors and padding) -- dark theme class 1`] = `
<div
  className="pe-list pe-list--borders      tests-lists-themed-list">
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Themed list (colors and padding) 1`] = `
<div
  className="pe-list pe-list--borders      tests-lists-themed-list">
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;
